feat: added the following components h1 h2 h3 h4 h5 h6 paragraph smallparagtraph. So now is the time to work add button and caption component. then I will jump into the header footer design

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,10 +3,79 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 200;
+  font-display: swap;
+  src: url('/fonts/inter/Inter_28pt-Light.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('/fonts/inter/Inter_18pt-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url('/fonts/inter/Inter_18pt-Medium.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('/fonts/inter/Inter_18pt-Bold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 900;
+  font-display: swap;
+  src: url('/fonts/inter/Inter_18pt-ExtraBold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 200;
+  font-display: swap;
+  src: url('/fonts/source-sans-pro/SourceSansPro-Light.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('../public/fonts/source-sans-pro/SourceSansPro-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url('../public/fonts/source-sans-pro/SourceSansPro-Semibold.ttf') format('truetype');
+}
+
 @theme {
+  /* Custom  color codes*/
   --color-primary: #5C6AC4;
-  --color-accent: #20C997
-  --color-natural-background: #F8F9FA
+  --color-accent: #20C997;
+  --color-natural-background: #F8F9FA;
+
+  /* custom fonts */
+  --font-inter: 'Inter', sans-serif;
+  --font-source-sans-pro: 'Source Sans Pro'
 }
 
 @theme inline {
