feat: the header and footer design is completed. Header and footer are not responsive yet. So the next task is to make them responsive.

--- a/app/globals.css
+++ b/app/globals.css
@@ -69,9 +69,8 @@
 
 @theme {
   /* Custom  color codes*/
-  --color-primary: #5C6AC4;
-  --color-accent: #20C997;
   --color-natural-background: #F8F9FA;
+  --color-text-color: #838383;
 
   /* custom fonts */
   --font-inter: 'Inter', sans-serif;
@@ -120,19 +119,19 @@
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
+  --background: #F8F9FA;
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
+  --primary: #5C6AC4;
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
+  --accent: #20C997;
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
