--- a/app/globals.css
+++ b/app/globals.css
@@ -203,3 +203,9 @@
 .general-shadow {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.1);
 }
+
+/* Active pagination design */
+.pagination-is-active {
+    background-color: var(--accent);
+    color: var(--primary-foreground);
+}
